@@ -29,4 +29,7 @@
 	$config['grocery_crud_paging_options'] = array('10','25','50','100');
 
     //The environment is important so we can have specific configurations for specific environments
+    $config['grocery_crud_default_theme'] = 'flexigrid';
+
+    //The environment is important so we can have specific configurations for specific environments
     $config['grocery_crud_environment'] = 'production';
